# rhyme

./: .gitattributes  .gitignore  README.md  build.ps1  compile.ps1  pyproject.toml  watch.ps1
src/: main.coco
